welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:8: error: Boolean does not take parameters
	 else (speed > 85 && isBirthday) { return 2 } 
                                         ^